@@ -7,5 +7,4 @@ t/kwalitee.t
 t/perlcritic.t
 t/pod-coverage.t
 t/pod.t
-TODO
 META.yml                                 Module meta-data (added by MakeMaker)
