@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Youri-Utils
-version:      v0.1.0
+version:      v0.1.1
 version_from: lib/Youri/Utils.pm
 installdirs:  site
 requires:
+    UNIVERSAL::require:            0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.30_01
